FIX: removed useless code, full dark mode support

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,10 +20,6 @@ body {
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-repeat: repeat;
-    background: linear-gradient(90deg, #0a0a0a calc(16px - 1px), #0a0a0a 1%) center,
-                linear-gradient(#171717 calc(16px - 1px), #0a0a0a 1%) center,
-                #262626;
-    background-size: 16px 16px;
+    background: #0a0a0a;
   }
 }
